# py-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  commitlint.config.js  cookiecutter.json  mkdocs.yml  pyproject.toml  renovate.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/python-coverage/: action.yml
.github/actions/python-test/: action.yml
.github/actions/setup-git/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: code-linter.yml  commit-linter.yml  initialization.yml  labeler.yml  markdown-linter.yml  pr-linter.yml  python-code-checker.yml  python-docs-release.yml  python-docstrings-coverage.yml  python-formatter.yml  python-release.yml  python-tests.yml  security-codeql.yml  security-pysa.yml  security-semgrep.yml  yaml-linter.yml
docs/: README.md  gen_ref_pages.py
src/{{cookiecutter.repository}}/: __init__.py  _version.py
test/: README.md
